@@ -28,6 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [jan] Use default Kolab folder for default notepad preference.
 * [jan] Mark Kolab folder as default when changing default notepad preference.
  </notes>
  <contents>
@@ -965,6 +966,7 @@
    <date>2012-11-27</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [jan] Use default Kolab folder for default notepad preference.
 * [jan] Mark Kolab folder as default when changing default notepad preference.
    </notes>
   </release>
